package ar.utn.ba.ddsi.models.entities;

import lombok.Getter;
import lombok.Setter;

@Getter
@Setter
public class ContenidoMultimedia {
  private String path;
  private Long idContenidoMultimedia;
}
