package ar.utn.ba.ddsi.models.entities.enumerados;

public enum Origen {
  CARGA_MANUAL,
  PROVENIENTE_DE_DATASET,
  PROVISTO_POR_CONTRIBUYENTE
}
